# SpectrumAnalyzer

./: .gitignore  Bar.cpp  Bar.hpp  CMakeLists.txt  ContinuousBar.cpp  ContinuousBar.hpp  ContinuousSpectrumAnalyzer.cpp  DSP.hpp  Dimmable.cpp  Dimmable.hpp  DiscreteBar.cpp  DiscreteBar.hpp  DiscreteSpectrumAnalyzer.cpp  Drawable.cpp  Drawable.hpp  Enums.hpp  Gradient.cpp  Gradient.hpp  LED.cpp  LED.hpp  MainWindow.cpp  MainWindow.ui  MathUtil.cpp  MathUtil.hpp  Parameters.hpp  SearchUtil.hpp  SimpleWindow.ui  SpectrumAnalyzer.cpp  SpectrumAnalyzer.hpp  SpectrumAnalyzer.pro
src/: Bar.cpp  Bar.hpp  ContinuousBar.cpp  ContinuousBar.hpp  Dimmable.cpp  Dimmable.hpp  DiscreteBar.cpp  DiscreteBar.hpp  Drawable.hpp  Fallable.hpp  Gradient.cpp  Gradient.hpp  LED.hpp  MainWindow.cpp  Parameters.hpp  PeakMark.hpp  SineItem.cpp  SineItem.hpp  SpectrumAnalyzer.cpp  SpectrumAnalyzer.hpp
test/: MainWindow.cpp  MainWindow.hpp  MainWindow.ui  SimpleWindow.cpp  SimpleWindow.hpp  TestUtil.cpp  TestUtil.hpp  main.cpp
